--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.1.3:
+    * Use Metrics v2.1.2
+    * Configuration option to turn off JVM metrics
+    * Configuration option to set Graphite prefix
+
 0.1.2:
     * Configurable reporting interval
     * Downcase all configuration variables
