--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Drew Stephens <drew@dinomite.net> https://github.com/dinomite
 Neil Prosser <neil.prosser@gmail.com> https://github.com/neilprosser
+Toby Moore (@tobymoore) https://github.com/tobymoore
