--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.1.4:
+    * Fix bug that was leaving metrics with default value
+
 0.1.3:
     * Use Metrics v2.1.2
     * Configuration option to turn off JVM metrics
