Add Chris to AUTHORS; update CHANGES for 0.2

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Drew Stephens <drew@dinomite.net> https://github.com/dinomite
 Neil Prosser <neil.prosser@gmail.com> https://github.com/neilprosser
 Toby Moore (@tobymoore) https://github.com/tobymoore
+Christopher Burroughs <christopher@clearpsring.com> https://github.com/cburroughs
